acuaphobia -50% probability for mermans and naga

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -238,13 +238,34 @@
                     [/fire_event]
                 [/then]
                 [elseif]
-                    [have_location]
-                        {EVENT_UNIT}
-                        terrain=W*,S*
-                    [/have_location]
-                    [then]
-                        {NFW_fear_of_water_WOUND}
-                    [/then]
+					[have_location]
+						{EVENT_UNIT}
+						terrain=W*,S*
+					[/have_location]
+					[then]
+						[if]
+							[have_location]
+								{EVENT_UNIT}
+								[filter]
+									race=merman,naga
+								[/filter]
+							[/have_location]
+							[then]
+								[fire_event]
+									name=nfwe_rand_wound
+									[primary_unit]
+										{EVENT_UNIT}
+									[/primary_unit]
+									[secondary_unit]
+										{EVENT_SECOND_UNIT}
+									[/secondary_unit]
+								[/fire_event]
+							[/then]
+							[else]
+								{NFW_fear_of_water_WOUND}
+							[/else]
+						[/if]
+					[/then]
                 [/elseif]
                 [elseif]
                     [have_location]
