Destruction event UTBS S12

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -464,6 +464,20 @@
         [/case]
     [/switch]
 [/event]
+
+[event]
+    name=last_breath
+    id=nfw_alien_filter
+    first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL nfw_current_scenario_id equals 12_The_Final_Confrontation}
+	[/filter_condition]
+    [filter]
+        type=Central Body2,Crawling Horror,Pulsing Spire
+    [/filter]
+	{NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Destruction" {NFW_COLOR_RED}}
+	{VARIABLE nfw_already_dead yes}
+[/event]
 #endif
 
 #ifdef CAMPAIGN_EASTERN_INVASION
