AMLA Bonus and NFW compatibility
Also added define NON_FATAL_WOUNDS_EXTENDED

--- a/_main.cfg
+++ b/_main.cfg
@@ -12,6 +12,7 @@
 [modification]
     id=nfw_extended
     name=_"Non-Fatal Wounds Extended"
+    define=NON_FATAL_WOUNDS_EXTENDED
     description=_"With this modification enabled, units are merely wounded instead of killed. If you choose the possibility of dead or undead, some units still can definitely die. If you win this scenario the wounded units will be added to your recall list.
 
 This does not apply to any unit that the objectives require you to keep alive. Even if they say they’re only wounded, the enemy will give your heroes no chance."
