--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -137,3 +137,49 @@
         kill=no
     [/store_unit]
 #enddef
+
+# macro used by AWW
+#define AWW_FILTER_CAN_BE_PROMOTED
+    canrecruit=no
+    [not]
+        [filter_wml]
+            [variables]
+                aww_promoted_leader=1
+            [/variables]
+        [/filter_wml]
+    [/not]
+    [not]
+        [filter_wml]
+            [variables]
+                aww_gifted=1
+            [/variables]
+        [/filter_wml]
+    [/not]
+    [not]
+        [filter_wml]
+            ellipse="misc/ellipse-hero"
+        [/filter_wml]
+        [or]
+            [filter_wml]
+                ellipse="misc/ellipse-hero-nozoc"
+            [/filter_wml]
+        [/or]
+        [or]
+            [filter_wml]
+                overlays="misc/hero-icon.png"
+            [/filter_wml]
+        [/or]
+        [or]
+            [filter_wml]
+                [modifications]
+                    [trait]
+                        [effect]
+                            apply_to=overlay
+                            add="misc/hero-icon.png"
+                        [/effect]
+                    [/trait]
+                [/modifications]
+            [/filter_wml]
+        [/or]
+    [/not]
+#enddef
