--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -25,6 +25,12 @@
                     {VARIABLE_CONDITIONAL healed_unit.modifications.object[$i].id equals {WOUND}}
                     [then]
                         {CLEAR_VARIABLE healed_unit.modifications.object[$i]}
+                        [if]
+                            {VARIABLE_CONDITIONAL aww_09_non_fatal_wounds equals yes}
+                            [then]
+                                {VARIABLE healed_unit.variables.healed_no_amla_bonus yes}
+                            [/then]
+                        [/if]
                         [break]
                         [/break]
                     [/then]
@@ -82,6 +88,54 @@
 {WOUND_HEALING damaged_display_healing damaged}
 {WOUND_HEALING necrosis_display_healing necrosis}
 {WOUND_HEALING wild_magic_display_healing wild_magic}
+
+#ifdef ADVANCED_WESNOTH_WARS
+[event]
+    name=post_advance
+    id=aww_09_trigger_post_advance_amla_extra_bonus
+    first_time_only=no
+    [filter]
+        [not]
+            [filter_wml]
+                [variables]
+                    healed_no_amla_bonus=yes
+                [/variables]
+            [/filter_wml]
+        [/not]
+    [/filter]
+    [filter_condition]
+        {VARIABLE_CONDITIONAL aww_09_enable_amla_bonus equals yes}
+        {VARIABLE_CONDITIONAL aww_was_amla equals yes}
+    [/filter_condition]
+    [fire_event]
+        name=aww_09_bonus_selection
+        [primary_unit]
+            x,y=$x1,$y1
+        [/primary_unit]
+    [/fire_event]
+    [unit_overlay]
+        {AWW_FILTER_CAN_BE_PROMOTED}
+        {EVENT_UNIT}
+        [not]
+            [filter_wml]
+                [variables]
+                    aww_amla_icon=yes
+                [/variables]
+            [/filter_wml]
+        [/not]
+        image=misc/aww-leader-bonus-bronze.png
+    [/unit_overlay]
+    [modify_unit]
+        [filter]
+            {AWW_FILTER_CAN_BE_PROMOTED}
+            {EVENT_UNIT}
+        [/filter]
+        [variables]
+            aww_amla_icon=yes
+        [/variables]
+    [/modify_unit]
+[/event]
+#endif
 
 [event]
     name=post_advance
@@ -197,6 +251,7 @@
                 [/display]
             [/abilities]
         [/effect]
+        {CLEAR_VARIABLE healed_no_amla_bonus}
     [/modify_unit]
 [/event]
 
