Fixed amla compatibility

--- a/utils/Wound_Healing.cfg
+++ b/utils/Wound_Healing.cfg
@@ -25,19 +25,18 @@
                     {VARIABLE_CONDITIONAL healed_unit.modifications.object[$i].id equals {WOUND}}
                     [then]
                         {CLEAR_VARIABLE healed_unit.modifications.object[$i]}
-                        [if]
-                            {VARIABLE_CONDITIONAL aww_09_non_fatal_wounds equals yes}
-                            [then]
-                                {VARIABLE healed_unit.variables.healed_no_amla_bonus yes}
-                            [/then]
-                        [/if]
                         [break]
                         [/break]
                     [/then]
                 [/if]
             [/do]
         [/for]
-
+		[if]
+			{VARIABLE_CONDITIONAL aww_09_non_fatal_wounds equals no}
+			[then]
+				{VARIABLE healed_unit.variables.healed_amla_bonus no}
+			[/then]
+		[/if]
         [unstore_unit]
             variable=healed_unit
         [/unstore_unit]
@@ -98,7 +97,7 @@
         [not]
             [filter_wml]
                 [variables]
-                    healed_no_amla_bonus=yes
+                    healed_amla_bonus=no
                 [/variables]
             [/filter_wml]
         [/not]
@@ -251,7 +250,7 @@
                 [/display]
             [/abilities]
         [/effect]
-        {CLEAR_VARIABLE healed_no_amla_bonus}
+        {CLEAR_VARIABLE healed_amla_bonus}
     [/modify_unit]
 [/event]
 
@@ -496,9 +495,6 @@
         ability=coward_display
     [/filter_second]
     {VARIABLE_OP rand_heal_fear rand(1..5)}
-    [message]
-        message="Enemy has level $unit.level and advances to $unit.advances_to you have level $second_unit.level"
-    [/message]
     [switch]
         variable=rand_heal_fear
         [case]
