Avoid agoraphobia on caves

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -199,6 +199,9 @@
                         [not]
                             terrain=*^V*,*^P*,*^E*,*^F*,*^T*,*^B*
                         [/not]
+						[not]
+							time_of_day_id=indoors,underground,deep_underground
+						[/not]
                     [/have_location]
                     [then]
                         {NFW_fear_of_open_WOUND}
