Event dissolution of Malifor

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -234,6 +234,21 @@
 #endif
 
 #filter special characters #TODO Liches on Northern Rebirth
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+[event]
+    name=last_breath
+    id=nfw_malifor_filter
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 05a_01_The_Pursuit}
+    [/filter_condition]
+    [filter]
+        id=Malifor
+    [/filter]
+    {VARIABLE nfw_already_dead yes}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Dissolution" {NFW_COLOR_RED}}
+[/event]
+#endif
 
 #ifdef CAMPAIGN_SON_OF_THE_BLACK_EYE
 [event]
