--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -4,6 +4,8 @@
 #
 # Using so many ifdefs is an odd style, but if they weren't there then each of these would still need a comment saying which campaign it refers to, and it might affect other campaigns too.
 
+## filter special characters 
+
 #ifdef CAMPAIGN_DELFADORS_MEMOIRS
 [event]
     name=prestart
@@ -17,7 +19,23 @@
     # The white mages are revived by the campaign code
     {VARIABLE nfw_exclude_unit_id "Sister Thera,Father Morvin"}
 [/event]
+
+## TODO Liches on Northern Rebirth
+[event]
+    name=last_breath
+    id=nfw_malifor_filter
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 05a_01_The_Pursuit}
+    [/filter_condition]
+    [filter]
+        id=Malifor
+    [/filter]
+    {VARIABLE nfw_already_dead yes}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Dissolution" {NFW_COLOR_RED}}
+[/event]
 #endif
+
 
 #ifdef CAMPAIGN_UNDER_THE_BURNING_SUNS
 [event]
@@ -26,7 +44,7 @@
 [/event]
 #endif
 
-# A list of scenarios where no units should survive, or the survivors don't reappear in later scenarios.
+## A list of scenarios where no units should survive, or the survivors don't reappear in later scenarios.
 [event]
     name=start
 
@@ -233,22 +251,7 @@
 [/event]
 #endif
 
-#filter special characters #TODO Liches on Northern Rebirth
-#ifdef CAMPAIGN_NORTHERN_REBIRTH
-[event]
-    name=last_breath
-    id=nfw_malifor_filter
-    first_time_only=no
-    [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 05a_01_The_Pursuit}
-    [/filter_condition]
-    [filter]
-        id=Malifor
-    [/filter]
-    {VARIABLE nfw_already_dead yes}
-    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Dissolution" {NFW_COLOR_RED}}
-[/event]
-#endif
+
 
 #ifdef CAMPAIGN_SON_OF_THE_BLACK_EYE
 [event]
