Event Sister Thera and Father Morvin wounds

--- a/utils/Randomizer.cfg
+++ b/utils/Randomizer.cfg
@@ -772,7 +772,32 @@
         [/case]
         [case]
             value=21
-            {NFW_captured_WOUND}
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+            [if]
+				[have_location]
+					{EVENT_UNIT}
+					[filter]
+						id=Sister Thera,Father Morvin
+					[/filter]
+				[/have_location]
+                [then]
+                    [fire_event]
+                        name=nfwe_rand_wound
+                        [primary_unit]
+                            {EVENT_UNIT}
+                        [/primary_unit]
+                        [secondary_unit]
+                            {EVENT_SECOND_UNIT}
+                        [/secondary_unit]
+                    [/fire_event]
+                [/then]
+                [else]
+#endif
+                    {NFW_captured_WOUND}
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+                [/else]
+            [/if]
+#endif
         [/case]
         [case]
             value=71,72,73,74,75,76,77,78,79,80,81,82,83,84,85,86,87,88,89,90,91,92,93,94,95,96,97,98,99,100
@@ -1025,6 +1050,18 @@
                         [/have_location]
                     [/not]
                 [/and]
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+				[and]
+					[not]
+						[have_location]
+							{EVENT_UNIT}
+							[filter]
+								id=Sister Thera,Father Morvin
+							[/filter]
+						[/have_location]
+					[/not]
+				[/and]
+#endif
                 [then]
                     {NFW_undead_ghost_WOUND {TRAIT_UNDEAD}}
                 [/then]
@@ -1043,6 +1080,18 @@
                             [/have_location]
                         [/not]
                     [/and]
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+					[and]
+						[not]
+							[have_location]
+								{EVENT_UNIT}
+								[filter]
+									id=Sister Thera,Father Morvin
+								[/filter]
+							[/have_location]
+						[/not]
+					[/and]
+#endif
                     [and]
                         [have_location]
                             {EVENT_UNIT}
@@ -1057,6 +1106,18 @@
                 [/elseif]
                 [elseif]
                     {NFW_dead_ENABLED}
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+					[and]
+						[not]
+							[have_location]
+								{EVENT_UNIT}
+								[filter]
+									id=Sister Thera,Father Morvin
+								[/filter]
+							[/have_location]
+						[/not]
+					[/and]
+#endif
                     [then]
                         {NFW_dead_WOUND}
                     [/then]
@@ -1088,11 +1149,35 @@
                         [/have_location]
                     [/not]
                 [/and]
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+				[and]
+					[not]
+						[have_location]
+							{EVENT_UNIT}
+							[filter]
+								id=Sister Thera,Father Morvin
+							[/filter]
+						[/have_location]
+					[/not]
+				[/and]
+#endif
                 [then]
                     {NFW_undead_corpse_WOUND}
                 [/then]
                 [elseif]
                     {NFW_dead_ENABLED}
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+					[and]
+						[not]
+							[have_location]
+								{EVENT_UNIT}
+								[filter]
+									id=Sister Thera,Father Morvin
+								[/filter]
+							[/have_location]
+						[/not]
+					[/and]
+#endif
                     [then]
                         {NFW_dead_WOUND}
                     [/then]
@@ -1117,6 +1202,18 @@
                 [or]
                     {NFW_undead_ENABLED}
                 [/or]
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+				[and]
+					[not]
+						[have_location]
+							{EVENT_UNIT}
+							[filter]
+								id=Sister Thera,Father Morvin
+							[/filter]
+						[/have_location]
+					[/not]
+				[/and]
+#endif
                 [then]
                     {NFW_dead_WOUND}
                 [/then]
@@ -1237,6 +1334,16 @@
                         [/filter]
                     [/have_location]
                 [/or]
+#ifdef CAMPAIGN_NORTHERN_REBIRTH
+				[or]
+					[have_location]
+						{EVENT_UNIT}
+						[filter]
+							id=Sister Thera,Father Morvin
+						[/filter]
+					[/have_location]
+				[/or]
+#endif
                 [or]
                     {VARIABLE_CONDITIONAL nfwe_unit_type.movement_type equals undeadspirit}
                 [/or]
