--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -13,6 +13,7 @@
 [/event]
 #endif
 
+
 #ifdef CAMPAIGN_NORTHERN_REBIRTH
 [event]
     name=prestart
@@ -34,6 +35,73 @@
     {VARIABLE nfw_already_dead yes}
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Dissolution" {NFW_COLOR_RED}}
 [/event]
+
+[event]
+    name=attack_end
+    id=nfw_white_mages_wound
+    first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL nfw_white_mages_wound equals yes}
+	[/filter_condition]	
+    [filter_second]
+		id=Sister Thera,Father Morvin
+		formula=hitpoints < 1
+    [/filter_second]
+    {VARIABLE nfwme_rand_scary_weapon $second_weapon.name}
+    {VARIABLE nfwme_rand_weapon_type $second_weapon.type}
+    [if]
+        {NFW_wounds_DISABLED}
+        [or]
+            {NFW_wounds_DISABLED_with_plague}
+        [/or]
+        [then]
+            {CLEAR_VARIABLE nfw_already_dead}
+        [/then]
+        [else]
+            [fire_event]
+                name=nfwe_rand_wound
+                [primary_unit]
+                    {EVENT_SECOND_UNIT}
+                [/primary_unit]
+                [secondary_unit]
+                    {EVENT_UNIT}
+                [/secondary_unit]
+            [/fire_event]
+        [/else]
+    [/if]
+[/event]
+
+[event]
+    name=start
+    id=nfw_white_mages_option
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 05a_01_The_Pursuit}
+		{VARIABLE_CONDITIONAL nfw_white_mages_wound not_equals yes}
+		[or]
+			[have_unit]
+				id=Sister Thera,Father Morvin
+				count=1,2
+			[/have_unit]
+		[/or]
+    [/filter_condition]
+	[message]
+		speaker=narrator
+		message=_ "<b><i>Non-Fatal Wounds:</i></b> Sister Thera and Father Morvin will revive each other indefinitely every time they lose all of their health. Choose if you want each time this happens to receive a wound like any other unit or not. The effects will be applied immediately, and they cannot receive capture, death, elemental, ghost, or undeath wounds."
+		image="misc/nfw-icon.png"
+		[option]
+			label=_ "Allows them to get wounds"
+			default=yes
+			[command]
+				{VARIABLE nfw_white_mages_wound yes}
+			[/command]
+		[/option]
+		[option]
+			label=_ "Don't let them get wounds"
+			# no action, just leave the default behavior
+		[/option]
+	[/message]
+[/event]            
 #endif
 
 
@@ -44,12 +112,22 @@
 [/event]
 #endif
 
-## A list of scenarios where no units should survive, or the survivors don't reappear in later scenarios.
+
 [event]
     name=start
 
     [switch]
         variable=nfw_current_scenario_id
+
+    [/switch]
+[/event]
+
+
+[event]
+    name=start
+    [switch]
+        variable=nfw_current_scenario_id
+## A list of scenarios where no units should survive, or the survivors don't reappear in later scenarios.
 #ifdef CAMPAIGN_SCEPTRE_FIRE
         [case]
             value=7_Outriding_the_Outriders
@@ -77,14 +155,7 @@
             [/fire_event]
         [/case]
 #endif
-    [/switch]
-[/event]
-
-# Some campaign-specific or scenario-specific warnings that display a message but don't change the behavior of the mod.
-[event]
-    name=start
-    [switch]
-        variable=nfw_current_scenario_id
+# Campaign-specific warning that display a message but don't change the behavior of the mod.
 #ifdef CAMPAIGN_DELFADORS_MEMOIRS
         [case]
             # Using scenario 2 because the first scenario is just dialogue.
@@ -97,16 +168,8 @@
             [/message]
         [/case]
 #endif
+# Scenario-specific warnings with options to change the behavior of the mod.
 #ifdef CAMPAIGN_THE_RISE_OF_WESNOTH
-        [case]
-            value=15_A_New_Land
-            [message]
-                speaker=narrator
-                # po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.
-                message= _ "<b><i>Non-Fatal Wounds</i></b> modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
-                image="misc/nfw-icon.png"
-            [/message]
-        [/case]
         [case]
             value=06_Temple_in_the_Deep
             [message]
@@ -130,6 +193,15 @@
                     label=_ "Continues normal Non-Fatal Wounds behavior"
                     # no action, just leave the NFW enabled
                 [/option]
+            [/message]
+        [/case]
+        [case]
+# po: For this scenario, the objective is to avoid deaths for as long as possible, the scenario ends when any unit perishes.            
+			value=15_A_New_Land
+            [message]
+                speaker=narrator
+                message= _ "<b><i>Non-Fatal Wounds</i></b> modification does not affect the objectives for this scenario. The unit can survives, but still triggers the same events as if it died."
+                image="misc/nfw-icon.png"
             [/message]
         [/case]
         [case]
