Final version of the event

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -72,18 +72,15 @@
 [/event]
 
 [event]
-    name=start
+    name=unit_placed
     id=nfw_white_mages_option
-    first_time_only=no
+    first_time_only=yes
     [filter_condition]
         {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 05a_01_The_Pursuit}
-		{VARIABLE_CONDITIONAL nfw_white_mages_wound not_equals yes}
-		[or]
-			[have_unit]
-				id=Sister Thera,Father Morvin
-				count=1,2
-			[/have_unit]
-		[/or]
+		[have_unit]
+			id=Sister Thera,Father Morvin
+			count=2
+		[/have_unit]
     [/filter_condition]
 	[message]
 		speaker=narrator
@@ -101,7 +98,7 @@
 			# no action, just leave the default behavior
 		[/option]
 	[/message]
-[/event]            
+[/event]
 #endif
 
 
