Attacker and defender

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -38,17 +38,52 @@
 
 [event]
     name=attack_end
-    id=nfw_white_mages_wound
+    id=nfw_white_mages_attacker
     first_time_only=no
 	[filter_condition]
 		{VARIABLE_CONDITIONAL nfw_white_mages_wound equals yes}
-	[/filter_condition]	
-    [filter_second]
+	[/filter_condition]
+    [filter]
 		id=Sister Thera,Father Morvin
 		formula=hitpoints < 1
-    [/filter_second]
+    [/filter]
     {VARIABLE nfwme_rand_scary_weapon $second_weapon.name}
     {VARIABLE nfwme_rand_weapon_type $second_weapon.type}
+    [if]
+        {NFW_wounds_DISABLED}
+        [or]
+            {NFW_wounds_DISABLED_with_plague}
+        [/or]
+        [then]
+            {CLEAR_VARIABLE nfw_already_dead}
+        [/then]
+        [else]
+            [fire_event]
+                name=nfwe_rand_wound
+                [primary_unit]
+                    {EVENT_UNIT}
+                [/primary_unit]
+                [secondary_unit]
+                    {EVENT_SECOND_UNIT}
+                [/secondary_unit]
+            [/fire_event]
+        [/else]
+    [/if]
+[/event]
+
+[event]
+    name=attack_end
+    id=nfw_white_mages_defender
+    first_time_only=no
+	[filter_condition]
+		{VARIABLE_CONDITIONAL nfw_white_mages_wound equals yes}
+	[/filter_condition]
+    [filter_second]
+		id=Sister Thera,Father Morvin
+		formula=other.hitpoints < 1
+    [/filter_second]
+    {VARIABLE nfwme_rand_scary_weapon $weapon.name}
+    {VARIABLE nfwme_rand_weapon_type $weapon.type}
     [if]
         {NFW_wounds_DISABLED}
         [or]
