Ro'Sothian Capture

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -27,13 +27,27 @@
     id=nfw_malifor_filter
     first_time_only=no
     [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 05a_01_The_Pursuit}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 05a_01_The_Pursuit}
     [/filter_condition]
     [filter]
         id=Malifor
     [/filter]
     {VARIABLE nfw_already_dead yes}
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Dissolution" {NFW_COLOR_RED}}
+[/event]
+
+[event]
+    name=last_breath
+    id=nfw_RoSothian_filter
+    first_time_only=no
+    [filter_condition]
+        {VARIABLE_CONDITIONAL current_scenario_id equals 07a_Settling_Disputes}
+    [/filter_condition]
+    [filter]
+        id="Ro'Sothian"
+    [/filter]
+    {VARIABLE nfw_already_dead yes}
+    {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Capture" {NFW_COLOR_RED}}
 [/event]
 
 [event]
@@ -111,7 +125,7 @@
     id=nfw_white_mages_option
     first_time_only=yes
     [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 05a_01_The_Pursuit}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 05a_01_The_Pursuit}
 		[have_unit]
 			id=Sister Thera,Father Morvin
 			count=2
@@ -149,7 +163,7 @@
     name=start
 
     [switch]
-        variable=nfw_current_scenario_id
+        variable=current_scenario_id
 
     [/switch]
 [/event]
@@ -158,7 +172,7 @@
 [event]
     name=start
     [switch]
-        variable=nfw_current_scenario_id
+        variable=current_scenario_id
 ## A list of scenarios where no units should survive, or the survivors don't reappear in later scenarios.
 #ifdef CAMPAIGN_SCEPTRE_FIRE
         [case]
@@ -331,7 +345,7 @@
     [/filter]
 
     [switch]
-        variable=nfw_current_scenario_id
+        variable=current_scenario_id
         [case]
             value=02_The_Fall
             [if]
@@ -363,7 +377,7 @@
     id=nfw_execution_filter
     first_time_only=no
     [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 08_Silent_Forest}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 08_Silent_Forest}
         {VARIABLE_CONDITIONAL nfw_death_trigger not_equals yes}
     [/filter_condition]
     [filter]
@@ -379,7 +393,7 @@
     id=nfw_frostbite_filter
     first_time_only=no
     [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 14_Back_Home}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 14_Back_Home}
     [/filter_condition]
     [filter]
         id=Thelarion
@@ -393,7 +407,7 @@
     id=nfw_bridge_sacrifice
     first_time_only=no
     [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 10_Saving_Inarix}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 10_Saving_Inarix}
         {VARIABLE_CONDITIONAL unit_detonating_says not_equals $nfw_empty_variable}
     [/filter_condition]
     [filter]
@@ -408,7 +422,7 @@
     id=nfw_bridge_abandoned
     first_time_only=no
     [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 10_Saving_Inarix}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 10_Saving_Inarix}
         {VARIABLE_CONDITIONAL nfw_bridge_destroyed equals yes}
     [/filter_condition]
     [filter]
@@ -427,7 +441,7 @@
 [event]
     name=start
     [switch]
-        variable=nfw_current_scenario_id
+        variable=current_scenario_id
         [case]
             value=19_Costly_Revenge
 
@@ -550,7 +564,7 @@
 [event]
     name=start
     [switch]
-        variable=nfw_current_scenario_id
+        variable=current_scenario_id
         [case]
             value=02_Across_the_Harsh_Sands
             [event]
@@ -592,7 +606,7 @@
     id=nfw_alien_filter
     first_time_only=no
     [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 12_The_Final_Confrontation}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 12_The_Final_Confrontation}
     [/filter_condition]
     [filter]
         type=Central Body2,Crawling Horror,Pulsing Spire
@@ -608,7 +622,7 @@
     id=nfw_bridge_destroyed
     first_time_only=no
     [filter_condition]
-        {VARIABLE_CONDITIONAL nfw_current_scenario_id equals 12_Evacuation}
+        {VARIABLE_CONDITIONAL current_scenario_id equals 12_Evacuation}
         {VARIABLE_CONDITIONAL nfw_kill_stranded equals yes}
         [have_location]
             x=8
