--- a/utils/nfw_main.cfg
+++ b/utils/nfw_main.cfg
@@ -8,7 +8,7 @@
     [lua]
         # This seems to be readable only via Lua
         code=<<
-            wml.variables["nfw_current_scenario_id"] = wesnoth.scenario.id
+            wml.variables["current_scenario_id"] = wesnoth.scenario.id
         >>
     [/lua]
 [/event]
