--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -94,7 +94,7 @@
 	[/filter_condition]
     [filter_second]
 		id=Sister Thera,Father Morvin
-		formula=other.hitpoints < 1
+		formula=$second_unit.hitpoints < 1
     [/filter_second]
     {VARIABLE nfwme_rand_scary_weapon $weapon.name}
     {VARIABLE nfwme_rand_weapon_type $weapon.type}
