Ro'Sothian and Ro'Arthian

--- a/utils/campaigns.cfg
+++ b/utils/campaigns.cfg
@@ -44,7 +44,7 @@
         {VARIABLE_CONDITIONAL current_scenario_id equals 07a_Settling_Disputes}
     [/filter_condition]
     [filter]
-        id="Ro'Sothian"
+        id="Ro'Sothian","Ro'Arthian"
     [/filter]
     {VARIABLE nfw_already_dead yes}
     {NFW_FLOAT_TEXT_SCROLL $x1 $y1 _"Capture" {NFW_COLOR_RED}}
