--- a/utils/Macros.cfg
+++ b/utils/Macros.cfg
@@ -105,7 +105,7 @@
         [have_location]
             {EVENT_UNIT}
             [filter]
-                id=Sir Gerrick,"Li'sar",Minister Hylas,Ethiliel,Urza Afalas,Dacyn,Garak,Zhul,Lionel,Relgorn,Darken Volk,Owaec,Harper,Hamel,"Ro'Arthian",Baglur,Krawg,Thursagan,Durstorn,Grüü,Angarthing,Ratheln,Dulcatulos,Cylanna,Caladon,Garnad,Marshal,Great Chief Brurbar,Sisal,Krash,Lady Jessene,Burin the Lost,Sir Ruddry,Sir Ladoc,Minister Edren,Lord Typhon,Nym,Grog,Konrad,Delfador,Kalenz,Prince Haldric,Haldric II,Deoran,Erlornas,Linaera,Baldras,Tallin,Baran,Rugnur,Gweddry,Kai Krellis,Malin Keshar,Aiglondur,Ardonna,Kaleh,"Kapou'e",Voadar,Jaffar,Rashti,Mehir,Menir,Szel,Arvith,Efraim_de_Ceise,Delenia,Krux,Krux_father,Clammie,Galas,Midnight Queen,Noiraran,Kuhnar,Eloh,Elenia
+                id=Sir Gerrick,"Li'sar",Minister Hylas,Ethiliel,Urza Afalas,Dacyn,Garak,Zhul,Lionel,Relgorn,Darken Volk,Owaec,Harper,Hamel,"Ro'Arthian","Ro'Sothian",Baglur,Krawg,Thursagan,Durstorn,Grüü,Angarthing,Ratheln,Dulcatulos,Cylanna,Caladon,Garnad,Marshal,Great Chief Brurbar,Sisal,Krash,Lady Jessene,Burin the Lost,Sir Ruddry,Sir Ladoc,Minister Edren,Lord Typhon,Nym,Grog,Konrad,Delfador,Kalenz,Prince Haldric,Haldric II,Deoran,Erlornas,Linaera,Baldras,Tallin,Baran,Rugnur,Gweddry,Kai Krellis,Malin Keshar,Aiglondur,Ardonna,Kaleh,"Kapou'e",Voadar,Jaffar,Rashti,Mehir,Menir,Szel,Arvith,Efraim_de_Ceise,Delenia,Krux,Krux_father,Clammie,Galas,Midnight Queen,Noiraran,Kuhnar,Eloh,Elenia
             [/filter]
         [/have_location]
     [/or]
